# fullctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.yaml  Dockerfile  MANIFEST.in  NOTICE  Pipfile  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml  setup.py  tox.ini
.github/workflows/: builder-alpine.yaml  builder-ubi8.yaml  codeql.yml  tests.yml
Ctl/: VERSION  config.yaml  tmplvars.yaml
Ctl/dev/: docker-compose.yml  example.env  exec.sh  run.sh
Ctl/dev/initdb.d/: init-db.sh
Ctl/docker/: Dockerfile.deb  Dockerfile.ubi8
docs/: api_docs.md  authentication.md  develop.md  ixctl-overlap.md  openapi.yaml  quickstart.md  service_bridge.md  settings.md  tasks.md
scripts/: devenv-setup.sh
src/fullctl/django/: admin.py  apps.py  auditlog.py  auth.py  context.py  context_processors.py  decorators.py  enum.py  exceptions.py  forms.py  health_check.py  mail.py  middleware.py  signals.py  tasks.py  testutil.py  urls.py  util.py  validators.py  views.py
src/fullctl/django/autocomplete/: devicectl.py  pdb.py  prefixctl.py  views.py
src/fullctl/django/fields/: __init__.py
src/fullctl/django/fields/service_bridge/: __init__.py  prefixctl.py
src/fullctl/django/inet/: const.py  exceptions.py  fields.py  util.py  validators.py
src/fullctl/django/management/commands/: base.py  fullctl_local_setup.py  fullctl_manage_tasks.py  fullctl_peeringdb_sync.py  fullctl_poll_tasks.py  fullctl_promote_user.py  fullctl_work_task.py
src/fullctl/django/migrations/: 0001_initial.py  0002_delete_apikey.py  0003_auditlog.py  0004_auto_20210528_1247.py  0005_auto_20210528_1252.py  0006_auto_20210603_0542.py  0007_auditlog_ip_address.py  0008_managementtask.py  0009_taskclaim.py  0010_alter_managementtask_queue_id.py  0011_alter_managementtask_status.py  0012_auto_20210805_1153.py  0013_auto_20210805_1200.py  0014_alter_taskclaim_task.py  0015_alter_task_parent.py  0016_task_limit_id.py  0017_alter_organizationuser_options.py  0018_task_schedule.py  0019_default_org.py  0020_auditlog_action_length.py  0021_servicebridgeaction.py  0022_auto_20220907_1253.py  0023_auto_20220907_1354.py  0024_auto_20221012_1227.py  0025_auto_20221025_1215.py  0026_auto_20230131_1405.py  0027_request_response.py  0028_request_identifier.py  0029_response_content.py  0030_alter_response_content.py  0031_auto_20230310_2152.py  0032_auto_20230719_1049.py  0033_task_fullctl_tas_status_d88ee1_idx_and_more.py  0034_task_requeued.py  0035_alter_servicebridgeaction_function.py  0036_task_fullctl_tas_created_137d72_idx_and_more.py  0037_taskheartbeat.py  0038_taskheartbeat_fullctl_tas_timesta_1a9e0d_idx.py  0039_taskscheduleclaim.py
src/fullctl/django/models/: __init__.py
src/fullctl/django/models/abstract/: __init__.py  alert.py  base.py  file.py  meta.py  metric.py  service_bridge.py  task_interface.py  template.py
src/fullctl/django/models/concrete/: __init__.py  account.py  auditlog.py  file.py  meta.py  service_bridge.py  tasks.py
src/fullctl/django/rest/: __init__.py  api_schema.py  authentication.py  core.py  decorators.py  fields.py  filters.py  mixins.py  renderers.py  throttle.py  usage.py
src/fullctl/django/rest/route/: aaactl_sync.py  account.py  service_bridge.py  usage.py
src/fullctl/django/rest/serializers/: __init__.py  aaactl_sync.py  account.py  meta.py  metric.py  org.py  service_bridge.py  template.py  usage.py
src/fullctl/django/rest/urls/: aaactl_sync.py  account.py  proxy.py  service_bridge.py  service_bridge_proxy.py  usage.py
src/fullctl/django/rest/views/: aaactl_sync.py  account.py  service_bridge.py  template.py  usage.py
src/fullctl/django/settings/: __init__.py  default.py
src/fullctl/django/social/backends/: __init__.py  peeringdb.py  twentyc.py
src/fullctl/django/social/pipelines/: __init__.py
src/fullctl/django/static/common/: app.css  app.js  service_bridge.js
src/fullctl/django/static/common/20c/: twentyc.core.min.js  twentyc.rest.js
src/fullctl/django/static/common/themes/: dark.css
src/fullctl/django/static/common/v2/: app.css  app.js  bgp_stats.js  graph.js  metric.js  traffic_alert.js
src/fullctl/django/tasks/: __init__.py  celery.py  context.py  extensions.py  orm.py  qualifiers.py  util.py
src/fullctl/django/templates/common/: base.html  tasks_queue.html  tool_base.html
src/fullctl/django/templates/common/apidocs/: redoc.html  swagger.html
src/fullctl/django/templates/common/app/: base.html  checkbox.html  index.html  modal.html  navbar.html  templates.html
src/fullctl/django/templates/common/auth/: login.html  oauth-badge.html  oauth.html
src/fullctl/django/templates/common/errors/: 400.html  401.html  403.html  404.html  500.html  base.html  details.html
src/fullctl/django/templates/common/v2/: base.html  snippets.html  tool_base.html  tool_base_sidebar.html
src/fullctl/django/templatetags/: fullctl_util.py
src/fullctl/django/views/: __init__.py  api_schema.py  template.py
src/fullctl/graph/mrtg/: mock.py  rrd.py
src/fullctl/graph/render/: traffic.py  util.py
src/fullctl/metrics/: __init__.py  schema.py
src/fullctl/service_bridge/: aaactl.py  auditctl.py  client.py  context.py  data.py  devicectl.py  ixctl.py  nautobot.py  netbox.py  pdbctl.py  peerctl.py  prefixctl.py  sot.py
src/fullctl/social/backends/: __init__.py
src/fullctl/social/pipelines/: __init__.py
src/fullctl/utils/: __init__.py
tests/: conftest.py  test_django_validators.py  test_service_bridge.py  test_utils.py
tests/django_tests/: fixtures.py  manage.py  test_api.py  test_commands.py  test_context_processors.py  test_django_util.py  test_django_validators.py  test_inet_util.py  test_mail.py  test_meta.py  test_middleware.py  test_models.py  test_serializers.py  test_service_bridge.py  test_setting.py  test_task_cancellation.py  test_task_commands.py  test_tasks.py  test_templatetags_fullctl_util.py  test_validators.py  test_views.py  testdev.py
tests/django_tests/project/: settings.py  urls.py  wsgi.py
tests/django_tests/testapp/: apps.py  models.py
tests/django_tests/testapp/migrations/: 0001_initial.py
(+30 files in other folders)
