[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fullctl"
repository = "https://github.com/fullctl/fullctl"
version = "0.3.0.1"
description = "Core classes and functions for service applications"
authors = [ "20C <code@20c.com>",]
license = "Apache-2.0"
classifiers = [ 
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9"
]

#packages = [
#    { include = "fullctl", from = "src" },
#]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.dependencies]
python = "^3.7"

# django deps
Django = "~3.2"
django-autocomplete-light = "^3"
django-crispy-forms = "^1.8"
django-grainy = "^1.9"
django-handleref = "^1"
django-inet = "^1"
django-recaptcha = "^2"
djangorestframework = "^3"
django-reversion = "^3"
social-auth-app-django = "^3"

# only needed for ixctl now, compare vs django-inet?
django-netfields = "<2"

confu = "^1.5"
grainy = "^1.8.1"
psycopg2-binary = ">2.8,<3"
pyyaml = "^5.4"

# move to aaactl?
stripe = "^2.55.2"

# move to pdbctl
django-peeringdb = "^2.8"
peeringdb = "^1"

# XXX still used?
whitenoise = "^5.2.0"
pip = "*"
celery = "<6,>=5"
uWSGI = "^2.0.19"


[tool.poetry.dev-dependencies]
docker-compose = "^1.29.1"
# tests
codecov = ">=2"
coverage = ">=5"
pytest = ">=6.0.1"
pytest-django = ">=3.8.0"
pytest-cov = "*"
pytest-pythonpath = "*"

# linting
bandit = "^1.6.2"
black = {version = ">=20", allow-prereleases = true}
isort = "^5.7.0"
flake8 = "^3.8.4"
pre-commit = "^2.13.0"
pyupgrade = "^2.19.4"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1.0.0,<2.0.0"

# ctl
ctl = "^1.0.0"
jinja2 = "^2.11.2"
tmpl = "^0.3.0"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"
